# 503NHackathon

./: .env.example  .gitignore  AGENTS.md  AUDIT_REPORT.md  CLAUDE.md  Makefile  README.md  VERIFICATION_REPORT.md  orchestrator.md  push_gradual.sh  pyproject.toml  requirements.txt
.claude/: settings.local.json
.orchestrator/: bugs.md  decisions.md  history.md  issues.md  key_facts.md  memory.yaml  plan.md
.orchestrator/sessions/: 0f8ce654.json  7d6447f1.json  8c829d70.json
docker/: Dockerfile.api  Dockerfile.dashboard  docker-compose.yml
docs/: architecture.md  executive_brief.html  openclaw-integration.md
docs/evidence/: openclaw_live_evidence.md  openclaw_realtime_output.txt
docs/validation/: test_run_report.md
eda/app/: 4_Staffing.py  Home.py
eda/scripts/: run_eda.py
eda/src/: config.py  io_utils.py
openclaw-skills/conut-ops/: SKILL.md
scripts/: check_openclaw_live.py  demo_smoke_test.py  generate_recommendations.py  run_pipeline.py  train_models.py
skills/conut-ops/: SKILL.md
src/: config.py
src/api/: main.py  schemas.py
src/data/: clean_reports.py  ingest_reports.py  validate.py
src/features/: combo_features.py  demand_features.py  expansion_features.py  growth_features.py  staffing_features.py  time_series_utils.py
src/integrations/: openclaw_tool.py
src/models/: combo_optimizer.py  demand_forecaster.py  (+3 more)
tests/: test_api_endpoints.py  test_combo_optimizer.py  test_demand_forecaster.py  test_expansion_feasibility.py  test_growth_strategy.py  test_ingestion_cleaning.py  test_openclaw_integration.py  test_staffing_estimator.py
(+52 files in other folders)
