[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "conut-ops-agent"
version = "1.0.0"
description = "AI-Driven Chief of Operations Agent for Conut bakery"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "mlxtend>=0.23.0",
    "statsmodels>=0.14.1",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]
pdf = ["weasyprint>=62.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
